Added product details page

--- a/FoodStore/Views/Product/Category.cshtml
+++ b/FoodStore/Views/Product/Category.cshtml
@@ -17,12 +17,42 @@ else
                     <img src="@product.ImageUrl" class="card-img-top" alt="@product.Name" />
                     <div class="card-body">
                         <h5 class="card-title">@product.Name</h5>
-                        <p class="card-text">Price: $@product.Price</p>
-                        <p class="card-text">Quantity: @product.UnitQuantity</p>
-                        <a href="@Url.Action("Details", "Products", new { id = product.Id })" class="btn btn-primary">View</a>
+                        <p class="card-text">Price: @product.Price lv.</p>
+                        <p class="card-text">Available: @product.StockQuantity pcs</p>
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <div class="input-group mb-2" style="width: 120px;">
+                                <button class="btn btn-outline-secondary btn-sm" type="button" onclick="decreaseQty(this)">-</button>
+                                <input type="number" class="form-control text-center" value="1" min="1" max="@product.StockQuantity" />
+                                <button class="btn btn-outline-secondary btn-sm" type="button" onclick="increaseQty(this)">+</button>
+                            </div>
+                            <button class="btn btn-success btn-sm">🛒 Add to Cart</button>
+                        }
+
+                        <a href="@Url.Action("Details", "Product", new { id = product.Id })" class="btn btn-primary">Details</a>
                     </div>
                 </div>
             </div>
         }
     </div>
+
+    <script>
+        function increaseQty(button) {
+            const input = button.parentElement.querySelector('input');
+            const max = parseInt(input.max);
+            let val = parseInt(input.value);
+            if (val < max) {
+                input.value = val + 1;
+            }
+        }
+
+        function decreaseQty(button) {
+            const input = button.parentElement.querySelector('input');
+            let val = parseInt(input.value);
+            if (val > 1) {
+                input.value = val - 1;
+            }
+        }
+    </script>
 }
