Adding checkout service, controller and view

--- a/FoodStore/Views/Cart/Index.cshtml
+++ b/FoodStore/Views/Cart/Index.cshtml
@@ -41,4 +41,8 @@ else
             }
         </tbody>
     </table>
+
+    <div class="text-right mt-3">
+        <a asp-action="Checkout" asp-controller="Cart" class="btn btn-success">Proceed to Checkout</a>
+    </div>
 }
