Added viemodel, service, controller and view for UserManagement

--- a/FoodStore/Views/Home/Index.cshtml
+++ b/FoodStore/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center mt-5">
+    <h1 class="display-3 fancy-welcome">Welcome to FoodStore</h1>
+</div>
+
+<div class="text-center mb-4">
+    <img src="~/images/hero-groceries.jpg" alt="Groceries" class="hero-image rounded shadow">
 </div>
