Editing Product and Favorites controller with try catch blocks and errors

--- a/FoodStore/Views/Cart/Index.cshtml
+++ b/FoodStore/Views/Cart/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@using FoodStore.ViewModels
 @model List<CartItemViewModel>
 
+@{
+    ViewData["Title"] = "Your Cart";
+}
+
 <h2>Your Cart</h2>
 
 <div class="d-flex justify-content-between mb-3">
