--- a/FoodStore/Views/Product/Details.cshtml
+++ b/FoodStore/Views/Product/Details.cshtml
@@ -1,6 +1,10 @@
 ﻿@using FoodStore.ViewModels
 @model ProductDetailsViewModel
 
+@{
+    ViewData["Title"] = "Product Details";
+}
+
 <div class="container mt-5">
     <h2>@Model.Name</h2>
     <div class="row">
