--- a/FoodStore/Views/Cart/History.cshtml
+++ b/FoodStore/Views/Cart/History.cshtml
@@ -1,6 +1,11 @@
 ﻿@using FoodStore.ViewModels
 @model List<OrderHistoryViewModel>
 
+@{
+    ViewData["Title"] = "Order History";
+}
+
+
 <h2>Order History</h2>
 
 @if (!Model.Any())
