--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -62,16 +62,17 @@
         </nav>
         <nav class="navbar navbar-expand category-bar">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Fruits and vegetables">Fruits and vegetables</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Milk and eggs">Milk and eggs</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Meat and fish">Meat and fish</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Sausages and deli">Sausages and deli</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Bread and pastry">Bread and pastry</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Sweets and snacks">Sweets and snacks</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Package foods">Package foods</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Beverages">Beverages</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Baby products">Baby products</a></li>
-                <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Category" asp-route-category="Household products">Household products</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Fruits and vegetables">Fruits and vegetables</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Milk and eggs">Milk and eggs</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Meat and fish">Meat and fish</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Sausages and deli">Sausages and deli</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Bread and pastry">Bread and pastry</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Sweets and snacks">Sweets and snacks</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Package foods">Package foods</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Package foods">Package foods</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Beverages">Beverages</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Baby products">Baby products</a></li>
+                <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Product" asp-action="Category" asp-route-category="Household products">Household products</a></li>
             </ul>
         </nav>
     </header>
