Add viewmodel, service, controller and viee for Add new product

--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -51,6 +51,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="Admin" asp-controller="UserManagement" asp-action="Index">User Management</a>
                                 </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="AddProduct" asp-action="Create">Add Product</a>
+                                </li>
                             }
                         }
                         <li class="nav-item">
