--- a/FoodStore/Areas/Admin/Views/Brand/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/Brand/Index.cshtml
@@ -17,7 +17,7 @@ else
         <table class="table table-bordered table-striped table-hover">
             <thead class="table-dark">
                 <tr>
-                    <th scope="col">#</th>
+                    <th scope="col">Id</th>
                     <th scope="col">Brand Name</th>
                     <th scope="col">Country of Origin</th>
                 </tr>
