--- a/FoodStore/Views/Cart/ThankYou.cshtml
+++ b/FoodStore/Views/Cart/ThankYou.cshtml
@@ -5,5 +5,5 @@
 <div class="text-center mt-5">
     <h2>Thank you for your order!</h2>
     <p>Your order has been placed successfully.</p>
-    <a asp-controller="Product" asp-action="All" class="btn btn-primary mt-3">Continue Shopping</a>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-primary mt-3">Continue Shopping</a>
 </div>
