Added viewmodel, controller, service andview for Supplier list

--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -65,6 +65,11 @@
                                         <li><a class="dropdown-item" asp-area="Admin" asp-controller="Brand" asp-action="AddBrand">Add Brand</a></li>
                                     </ul>
                                 </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="Supplier" asp-action="Index">All Suppliers</a>
+                                </li>
+
                             }
                         }
                         <li class="nav-item">
