--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -66,8 +66,14 @@
                                     </ul>
                                 </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="Supplier" asp-action="Index">All Suppliers</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle text-dark" href="#" id="supplierDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Suppliers
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="supplierDropdown">
+                                        <li><a class="dropdown-item" asp-area="Admin" asp-controller="Supplier" asp-action="Index">All Suppliers</a></li>
+                                        <li><a class="dropdown-item" asp-area="Admin" asp-controller="Supplier" asp-action="AddSupplier">Add Supplier</a></li>
+                                    </ul>
                                 </li>
 
                             }
