Added view model, service, controller and view for Edit product

--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="AddProduct" asp-action="Create">Add Product</a>
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Create">Add Product</a>
                                 </li>
 
                                 <li class="nav-item dropdown">
