--- a/FoodStore/Views/Product/Details.cshtml
+++ b/FoodStore/Views/Product/Details.cshtml
@@ -41,10 +41,9 @@
                 <div class="mt-3">
                     <a asp-area="Admin" asp-controller="Product" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
 
-                    <form asp-area="Admin" asp-controller="Product" asp-action="Delete" asp-route-id="@Model.Id" method="post" class="d-inline">
-                        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this product?');">Delete</button>
-                    </form>
+                    <a asp-area="Admin" asp-controller="Product" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
                 </div>
+                
             }
         </div>
     </div>
