--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -76,6 +76,10 @@
                                     </ul>
                                 </li>
 
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="Reports" asp-action="Index">Reports</a>
+                                </li>
+
                             }
                         }
                         <li class="nav-item">
