Added user email in Report Order controller, service, view model and view

--- a/FoodStore/Areas/Admin/Views/Reports/Orders.cshtml
+++ b/FoodStore/Areas/Admin/Views/Reports/Orders.cshtml
@@ -38,6 +38,7 @@ else
                 <th>Brand</th>
                 <th>Supplier</th>
                 <th>Quantity</th>
+                <th>User Email</th>
             </tr>
         </thead>
         <tbody>
@@ -51,6 +52,7 @@ else
                     <td>@order.Brand</td>
                     <td>@order.Supplier</td>
                     <td>@order.Quantity</td>
+                    <td>@order.UserEmail</td>
                 </tr>
             }
         </tbody>
