--- a/FoodStore/Views/Shared/_Layout.cshtml
+++ b/FoodStore/Views/Shared/_Layout.cshtml
@@ -77,6 +77,10 @@
                                 </li>
 
                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="OrderManagement" asp-action="Index">Manage Orders</a>
+                                </li>
+
+                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="Admin" asp-controller="Reports" asp-action="Index">Reports</a>
                                 </li>
 
