Added viewmodel, service, controller and view for Product Report in Admin area

--- a/FoodStore/Areas/Admin/Views/Reports/Index.cshtml
+++ b/FoodStore/Areas/Admin/Views/Reports/Index.cshtml
@@ -9,3 +9,9 @@
         <a asp-action="Orders" asp-controller="Reports" asp-area="Admin">Orders Report</a>
     </li>
 </ul>
+
+<ul class="list-group">
+    <li class="list-group-item">
+        <a asp-action="Products" asp-controller="Reports" asp-area="Admin">Products Report</a>
+    </li>
+</ul>
