--- a/FoodStore/Areas/Admin/Views/Supplier/EditSupplier.cshtml
+++ b/FoodStore/Areas/Admin/Views/Supplier/EditSupplier.cshtml
@@ -8,6 +8,7 @@
 <h2 class="mb-4">Edit Supplier</h2>
 
 <form asp-area="Admin" asp-controller="Supplier" asp-action="EditSupplier" method="post" class="needs-validation" novalidate>
+    @Html.AntiForgeryToken()
     <input type="hidden" asp-for="Id" />
 
     <div class="mb-3">
