--- a/FoodStore/Areas/Admin/Views/Product/Create.cshtml
+++ b/FoodStore/Areas/Admin/Views/Product/Create.cshtml
@@ -7,6 +7,7 @@
 
 
 <form asp-action="Create" method="post" class="form-container">
+    @Html.AntiForgeryToken()
 
     <div class="form-group">
         <label asp-for="Name" class="form-label">Product Name</label>
