--- a/FoodStore/Areas/Admin/Views/Supplier/Delete.cshtml
+++ b/FoodStore/Areas/Admin/Views/Supplier/Delete.cshtml
@@ -17,6 +17,7 @@
 </div>
 
 <form asp-area="Admin" asp-controller="Supplier" asp-action="ConfirmDelete" method="post">
+    @Html.AntiForgeryToken()
     <input type="hidden" asp-for="Id" />
     <input type="hidden" asp-for="Name" />
     <input type="hidden" asp-for="Phone" />
