--- a/FoodStore/Views/Cart/Checkout.cshtml
+++ b/FoodStore/Views/Cart/Checkout.cshtml
@@ -14,6 +14,7 @@
 else
 {
     <form asp-action="CheckoutConfirm" method="post">
+        @Html.AntiForgeryToken()
         <table class="table">
             <thead>
                 <tr>
